# SPE_Project

./: CMakeLists.txt  Dockerfile  Main.cpp  README.md  devcontainer.json  settings.gradle.kts
.github/workflows/: build-gradle-project.yml  github-actions-demo.yml
app/: CMakeLists.txt  build.gradle.kts
app/src/main/cpp/: app.cpp
app/src/main/headers/: app.h
app/src/test/cpp/: app_test.cpp
opencv-build/: CMakeDownloadLog.txt  CMakeVars.txt
src/: Main.cpp
